--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,16 +1,13 @@
-FROM quay.io/jeremiahsavage/cdis_base
+FROM ubuntu:16.04
+LABEL maintainer="sli6@uchicago.edu"
+LABEL version="2.3.9"
+LABEL description="VarScan.v2.3.9"
 
-MAINTAINER Shenglai Li <sli6@uchicago.edu>
-
-USER root
-RUN apt-get update && apt-get install -y --force-yes \
+RUN apt-get update -y \
+    && apt-get install -y \
     openjdk-8-jre-headless \
-    wget
+    wget \
+    && apt-get clean
 
-USER ubuntu
-ENV HOME /home/ubuntu
-WORKDIR ${HOME}
-
-ENV varscan2-tool v2.3
-
-RUN wget http://downloads.sourceforge.net/project/varscan/VarScan.v2.3.9.jar
+RUN cd /opt/ \
+    && wget http://downloads.sourceforge.net/project/varscan/VarScan.v2.3.9.jar
